- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
                             ALPHA 15.3 CHANGELOG
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
Alpha 15.3 (??/??/????)
Current Level Cap: 25
- - - - - - - - - - - - -
INTRO TEXT

Changes:
 - Fire takes 25% damage from Ice instead of 0%.
 - Ethereal Bat Wing can drop more than once.
 - Reduced bits/EXP variation from 5% to 3%.
 - Apocalypse uses idle motion in place of dying/dead motions.

Bug Fixes:
 - Fixed statues giving an element rate decrease not working as intended.
 - Fixed element absorption not working as intended.

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
                             ALPHA 15.2 CHANGELOG
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
Alpha 15.2 (2/5/2025)
Current Level Cap: 25
- - - - - - - - - - - - -
Yet another hotfix. A game breaking bug was squashed, and online leaderboards have been added!

Additions:
 - Added leaderboards for Bits, Damage Dealt, and Playtime.
 - Added 2 new items:
  ~ Scrap of Big Mouth's Cape
  ~ Scrap of Smart Mouth's Cape
 - Added 3 new Trailia statues.
 - Discord rich presence will also show battle details.
 - Added a button to open the screenshot folder on the main menu.

Changes:
 - Increased initial levels of Player 3 from 3 → 4 and Player 4 from 4 → 5.
 - Swapped Foresight and Offensive Stance learn levels.
 - Reverted Sleep back to Contingence.

Bug Fixes:
 - Fixed crash after agreeing to raid the Sand Stomper Sanctum.
 - Fixed EXP Suppressor hiding party members from victory screen.
 - Fixed Rainbow Slime not changing color.
 - Fixed a bug where typing on the rename screen could take screenshots.
 - Fixed a bug where the screenshot folder wouldn't open if a screenshot hadn't been taken yet.
 - Fixed a bug where the switch for Laeryidyean's guaranteed Darkfire wouldn't reset when retrying the battle.