@@ -7,6 +7,7 @@ Current Level Cap: 25
 INTRO TEXT
 
 Changes:
+ - Leaderboards pull on the title screen and push after saving.
  - Fire takes 25% damage from Ice instead of 0%.
  - Ethereal Bat Wing can drop more than once.
  - Reduced bits/EXP variation from 5% to 3%.
